# learn_cmake

t2/: CMakeLists.txt  README
t2/doc/: hello.txt
t2/src/: CMakeLists.txt  main.cpp
