PROJECT(HELLO)
MESSAGE(STATUS "This is source dir ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "This is binary dir ${PROJECT_BINARY_DIR}")
ADD_SUBDIRECTORY(src)  #指定编译输出位置为bin

INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)
